k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: NodePort
  selector:
    app: fastapi-app
  ports:
    - port: 80         # service port(Ingress forwards to this)
      targetPort: 8000  # FastAPI container exposes 8000
      nodePort: 30080
