k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  tls:
    - hosts:
        - fastapi.local
      secretName: fastapi-tls # TLS secret(created from self-signed cert)
  rules:
    - host: fastapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: fastapi-service
                port:
                  number: 80
